<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="gads_leadership_logo">GADS Leadership Logo</string>
    <string name="main_activity_label">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_learner_name">Dummy Learner Name</string>
    <string name="image">Image</string>
    <string name="dummy_learner_data">Dummy Learner Data</string>
    <string name="project_submission">Project Submission</string>
    <string name="back_button">Back Button</string>
    <string name="main_to_submit">Main_to_Submit</string>
    <string name="top_left">top_left</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="error">error</string>
    <string name="error_in_submission">Error in Submission</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="notsure">notSure</string>
    <string name="question_mark">\?</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
</resources>