<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <ImageButton
                android:id="@+id/backSubmit"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:background="#00FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                app:srcCompat="@drawable/abc_vector_test"
                tools:ignore="PrivateResource" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="241dp"
                android:layout_height="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backSubmit"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/main_to_submit"
                app:srcCompat="@drawable/ic_gads_appbar" />

            <TextView
                android:id="@+id/submit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/project_submission"
                android:textAlignment="center"
                android:textColor="#D86D1B"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill_iq_leaders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>